[package]
name = "druid-client-rust"
version = "0.1.0"
authors = ["bugzmanov <bugzmanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
serde_derive = "1.0.115"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json", "socks", "blocking"] }
anyhow = "1.0.31"


[dev-dependencies]
tokio-test = "*"