[package]
name = "druid-client-rust"
version = "0.1.0"
authors = ["bugzmanov <bugzmanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "socks", "blocking"] }
serde = {version = "1.0.115", features = ["derive"]}
serde_derive = "1.0.115"
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio = { version = "0.2", features = ["full"] }


[dev-dependencies]
tokio-test = "*"