[package]
name = "druid-io"
version = "0.1.0"
authors = ["Rafael Bagmanov <bugzmanov@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/bugzmanov/druid-io-rs"
repository = "https://github.com/bugzmanov/druid-io-rs"
description = "Asynchronous Apache Druid client library."
readme = "README.md"
keywords = ["tokio", "database", "druid"]
categories = ["database"]
exclude = ["tests/*", "examples/*", "docker/*"]

[dependencies]
reqwest = { version = "0.10", features = ["stream"] }
serde = {version = "1.0.115", features = ["derive"]}
serde_derive = "1.0.115"
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["rt-core", "rt-threaded", "blocking"] }


[dev-dependencies]
tokio-test = "0.2.1"